--- a/scholarlyScience/index/templates/index/home.html
+++ b/scholarlyScience/index/templates/index/home.html
@@ -33,8 +33,8 @@
 
                             <div>
                                 <b>SCALE</b><br>
-                                {% for i in list_scale %}
-                                        <span class=""><a href="?scale={{i}}">{{i}}</a></span>
+                                {% for i in list_assignment %}
+                                        <span class=""><a href="?assignment={{i}}">{{i}}</a></span>
                                         
                                 {% endfor %}
     
