--- a/scholarlyScience/index/templates/index/home.html
+++ b/scholarlyScience/index/templates/index/home.html
@@ -1,4 +1,4 @@
-{%extends "index/base.html"%}
+{%extends "base.html"%}
 {%block content%}
     <div class="ContentPage" style="padding-top: 4em;">
         <div class="HomePage">
