Add ShowMore Button, Multiple Tags Filter, Randomized Cards

--- a/scholarlyScience/index/templates/base.html
+++ b/scholarlyScience/index/templates/base.html
@@ -73,6 +73,10 @@
             .luxbar-navigation a {
                 border-bottom: none;
             }
+            .active {
+                border-radius: 3px;
+                background-color: skyblue;
+            }
     </style>
 </head>
 <body>
@@ -105,5 +109,6 @@
         {%block content%}
         {%endblock%}
     </div>
+    <script src="../static/index/script.js"></script>
 </body>
 </html>
