--- a/scholarlyScience/index/templates/index/home.html
+++ b/scholarlyScience/index/templates/index/home.html
@@ -21,28 +21,28 @@
                             </label> -->
                             <br><br><br>
                             
-                            <div>
+                            <div id="tagLocation">
                                 <b class="text-dark">Location</b><br>
                                 <span class="bg-dark text-light ">Remote-friendly</span>
                                 {% for i in list_set %}
-                                        <span class=''><a href="?location={{i}}">{{i}}</a></span>
+                                        <span class=''><a id="{{i}}" style="padding: 2px; margin: 2px 2px 2px 2px;">{{i}}</a></span>
                                         
                                 {% endfor %}
     
                             </div><br><br><br>
 
-                            <div>
+                            <div id="tagScale">
                                 <b>SCALE</b><br>
                                 {% for i in list_assignment %}
-                                        <span class=""><a href="?assignment={{i}}">{{i}}</a></span>
+                                        <span class="" ><a id="{{i}}" style="padding: 2px; margin: 2px 2px 2px 2px;">{{i}}</a></span>
                                         
                                 {% endfor %}
     
                             </div><br><br><br>
-                            <div>
+                            <div id="tagTechnology">
                                 <b>TECHNOLOGY</b><br>
                                 {% for i in list_tech %}
-                                        <span class=" "><a href="?tech={{i}}">{{i}}</a></span>  
+                                        <span class=" "><a id="{{i}}" style="padding: 2px; margin: 2px 2px 2px 2px;">{{i}}</a></span>  
                                         
                                 {% endfor %}
     
@@ -55,10 +55,10 @@
             
             <!--company cards-->
             <div class="Content">
-                <div class="MuiGrid-root Companies MarginBottom MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-space-around">
+                <div class="CompanyCardContainer MuiGrid-root Companies MarginBottom MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-justify-xs-space-around">
 
                    {% for company in content %}
-                      <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-6">
+                      <div class="Indexed MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-md-12 MuiGrid-grid-lg-6">
                         <div class="CompanyCard">
                             <div class="MuiPaper-root MuiCard-root TheCard MuiPaper-elevation1 MuiPaper-rounded">
                                 <div class="MuiCardContent-root CardContents">
@@ -80,16 +80,15 @@
                                                 </div>
                                             </div>
                                             <div class="MuiGrid-root CompanyTags MuiGrid-container MuiGrid-align-items-xs-flex-start">
-                                            
                                             {% for i in company.cskill.all %}
-                                                  <div class="MuiGrid-root Tag MuiGrid-item">
+                                                <div class="MuiGrid-root Tag MuiGrid-item">
                                                     <p class="MuiTypography-root TagText MuiTypography-body1">
                                                             {{i.skills}}
                                                     </p>
-                                                  </div>
-                                           
+                                                </div>
+                                        
                                             {% endfor %}
-                                        </div>
+                                            </div>
                                         </div>
                                     </a>
                                 </div>
@@ -97,9 +96,10 @@
                         </div>
                       </div>
                    {%endfor%}
+                   <button style="width: 100%;" class="btn btn-info" id="showMoreBtn">Show More</button>
+                   <button style="width: 100%;" class="btn btn-light" id="showLessBtn">Show Less</button>
                 </div>
             </div>
-        
         </div>
     </div>
     </div>
